[package]
name = "iserv_free_wifi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.69"
serde = {version = "1.0.130", features = ["derive"]}
tokio = {version = "1.13.0", features = ["macros", "rt-multi-thread", "net", "sync", "time"]}
reqwest = {version = "0.11.6", features = ["cookies", "json", "multipart"]}
rust-crypto = "0.2.36"
bytes = "1.1.0"
rand = {version = "0.8.4", features = ["getrandom"] }
scraper = "0.12.0"
uuid = {version = "0.8.2", features = ["v4"]}
form_urlencoded = "1.0.1"
base64 = "0.13.0"
clap = "2.33.3"