[package]
name = "iserv_free_wifi"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.83"
serde = {version = "1.0.143", features = ["derive"]}
tokio = {version = "1.20.1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal"]}
reqwest = {version = "0.11.11", features = ["cookies", "json", "multipart"]}
rust-crypto = "0.2.36"
bytes = "1.2.1"
rand = {version = "0.8.5", features = ["getrandom", "std_rng"] }
scraper = "0.13.0"
uuid = {version = "1.1.2", features = ["v4"]}
form_urlencoded = "1.0.1"
base64 = "0.13.0"
clap = "3.2.17"
once_cell = "1.13.1"