[package]
name = "iserv_free_wifi"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.99"
serde = {version = "1.0.164", features = ["derive"]}
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal"]}
reqwest = {version = "0.11.18", features = ["cookies", "json", "multipart"]}
rust-crypto = "0.2.36"
bytes = "1.4.0"
rand = {version = "0.8.5", features = ["getrandom", "std_rng"] }
scraper = "0.17.1"
uuid = {version = "1.1.2", features = ["v4"]}
form_urlencoded = "1.0.1"
base64 = "0.21.2"
clap = "3.2.25"
once_cell = "1.18.0"